# leap-data-management-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  _typos.toml  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: catalog-ci.yaml  ci.yaml  release.yaml
ci/: environment-catalog.yaml  environment.yaml
data_management_utils/: __init__.py  utils.py
docs/: catalog.md
leap_data_management_utils/: __init__.py  bq_interfaces.py  catalog.py  cmip_catalog.py  cmip_testing.py  cmip_transforms.py  cmip_utils.py  data_management_transforms.py  utils.py
leap_data_management_utils/testing_notebooks/: testing_cmip_bigquery.ipynb
leap_data_management_utils/tests/: test_cmip_catalog.py  test_cmip_transforms.py  test_data_management_transforms.py
pangeo-forge-big-query/: utils.py
pangeo_forge_big_query/: __init__.py  utils.py
