[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "leap-data-management-utils"
dynamic = ["version"]
requires-python = ">=3.9"
description = "LEAP / pangeo-forge-recipes extension library for logging data in Google Big Query"
readme = "README.md"
authors = [{ name = "CarbonPlan", email = "tech@carbonplan.org" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "apache-beam",
    "google-cloud-bigquery",
    "google-api-core",
    "zarr",
]

[project.optional-dependencies]
test = [
    "pre-commit",
]
